Changed size of footer img to prevent clipping

--- a/css/shared-styles.css
+++ b/css/shared-styles.css
@@ -58,7 +58,8 @@ ul {
 }
 
 footer img {
-    width: 100%;
+    width: 90%;
+    margin: 0 auto;
     height: auto;
 }
 footer hr {
